Support dark mode, minor font changes -Issue:74702

--- a/src/global/token-fonts.scss
+++ b/src/global/token-fonts.scss
@@ -3,11 +3,7 @@
     --small2-font-size: 10px;
     --small2-font-size: 11px;
     --normal-font-size: 12px;
-    --normal2-font-size: 13px;
-    --large-font-size: 16px;
-    --large2-font-size: 20px;
-
+    --normal2-font-size: 13px;    
     --gxcf-font-family: "Open Sans", sans-serif;
-
     --wide-font-weight: 600;
 }
